added genre/song lookup table

--- a/notebooks/spotify_songs.ipynb
+++ b/notebooks/spotify_songs.ipynb
@@ -804,14 +804,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "non_artists.to_csv('../data/non_artists.csv')\n",
     "non_songs.to_csv('../data/non_songs.csv')\n",
     "artist_df.to_csv('../data/artist_list_v2.csv')\n",
-    "song_df.to_csv('../data/song_list_v2')"
+    "song_df.to_csv('../data/song_list_v2.csv')"
    ]
   }
  ],
