--- a/notebooks/spotipy.ipynb
+++ b/notebooks/spotipy.ipynb
@@ -3103,7 +3103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Dealing with Genres"
+    "### Dealing with Genres\n"
    ]
   },
   {
@@ -3224,6 +3224,313 @@
    ],
    "source": [
     "genre_per_artist.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# genre_per_artist['song'] = genre_per_artist.apply()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dropping Non-Artists From `genre_per_artist`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "non_artists = pd.read_csv('../data/non_artists.csv', index_col=0)\n",
+    "non_artists_id = non_artists['s_artist_id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genre_todrop = genre_per_artist.query(\"id in @non_artists_id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/site-packages/pandas/core/frame.py:3697: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  errors=errors)\n"
+     ]
+    }
+   ],
+   "source": [
+    "genre_per_artist.drop(labels=genre_todrop.index, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating Genre-Song Table\n",
+    "\n",
+    "In order to examine the relationship with each genre as it's applied to each artist, and each song, I'll need to create a lookup table to match them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_df = pd.read_csv('../data/song_list_v2.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['6SluaPiV04KOaRTOIScoff', '5qEVq3ZEGr0Got441lueWS',\n",
+       "       '5kqIPrATaCc2LqxVWzQGbk', ..., '2ayphdNEBBaAErWdTMAhsm',\n",
+       "       '7BY005dacJkbO6EPiOh2wb', '09WwqFDqX2zv8rlvf4xYAk'], dtype=object)"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "song_df['s_song_id'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['boy band', 'dance pop', 'europop', 'pop', 'post-teen pop']\n",
+      "['antiviral pop', 'comedy rock', 'comic']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for g_list, a_id in genre_per_artist.values[:2]:\n",
+    "    print(g_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['s_song_id', 'album_release_date', 'artist_id', 'artist_name',\n",
+       "       'duration_ms', 'explicit', 'linked_album', 'song_title'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "song_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def genre_p_artist(genres):\n",
+    "    '''\n",
+    "    Make artist to genre listing\n",
+    "    '''\n",
+    "    gdict_list = []\n",
+    "    \n",
+    "    for g_list, a_id  in genres.values:\n",
+    "        for genre in g_list:\n",
+    "            gdict_list.append((genre, a_id))\n",
+    "    return gdict_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genre_w_artists = genre_p_artist(genre_per_artist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['6SluaPiV04KOaRTOIScoff', '6UE7nl9mha6s8z0wFQFIZ2'],\n",
+       "       ['5qEVq3ZEGr0Got441lueWS', '6S58b0fr8TkWrEHOH4tRVu'],\n",
+       "       ['5kqIPrATaCc2LqxVWzQGbk', '25u4wHJWxCA9vO0CzxAbK7'],\n",
+       "       ..., \n",
+       "       ['2ayphdNEBBaAErWdTMAhsm', '7BLOa6FxCbMnowidkQfLIA'],\n",
+       "       ['7BY005dacJkbO6EPiOh2wb', '3ICflSq6ZgYAIrm2CTkfVP'],\n",
+       "       ['09WwqFDqX2zv8rlvf4xYAk', '64mPnRMMeudAet0E62ypkx']], dtype=object)"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "song_df[['s_song_id', 'artist_id']].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def genre_psong(genres, songs):\n",
+    "    gs_list = []\n",
+    "    count = 1\n",
+    "    for song, artist in songs[['s_song_id', 'artist_id']].values:\n",
+    "        for genre in genres:\n",
+    "            if artist == genre[1]:\n",
+    "                gs_list.append((count, song, genre[0], genre[1]))\n",
+    "                count += 1\n",
+    "    return gs_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genre_songs = genre_psong(genre_w_artists, song_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genre_songs.insert(0,(0, 'song_id', 'genre', 'artist_id'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genre_dict = genre_df.to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genre_ids_songs = []\n",
+    "for gs_id, song_id, genre, artist_id in genre_songs[1:]:\n",
+    "    for k, v in genre_dict['genre'].items():\n",
+    "        if genre == v:\n",
+    "            genre_ids_songs.append((gs_id, song_id, k, genre, artist_id))\n",
+    "        elif genre == '':\n",
+    "            genre_ids_songs.append((gs_id, song_id, '', genre, artist_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, '6SluaPiV04KOaRTOIScoff', 139, 'dance pop', '6UE7nl9mha6s8z0wFQFIZ2')"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genre_ids_songs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gsong_lookup = pd.DataFrame(genre_ids_songs, columns=['gs_id', 'song_id', 'genre_id', 'genre_name', 'artist_id']).set_index('gs_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(749015, 4)"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gsong_lookup.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gsong_lookup.to_csv('../data/gsong_lookup.csv')"
    ]
   },
   {
