additional prep for EDA

--- a/notebooks/spotify_audio_analysis.ipynb
+++ b/notebooks/spotify_audio_analysis.ipynb
@@ -54,17 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/audio_analysis/46n2EGFnPC3tzWCN1Aqe26.json', 'r') as f:\n",
+    "with open('../data/audio_analysis/000xQL6tZNLJzIrtIgxqSl.json', 'r') as f:\n",
     "    example = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "dict_keys(['meta', 'track', 'bars', 'beats', 'tatums', 'sections', 'segments'])"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -141,6 +141,37 @@
    "metadata": {},
    "source": [
     "### Sections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'start': 0.0,\n",
+       " 'duration': 19.11423,\n",
+       " 'confidence': 1.0,\n",
+       " 'loudness': -12.969,\n",
+       " 'tempo': 166.075,\n",
+       " 'tempo_confidence': 0.507,\n",
+       " 'key': 2,\n",
+       " 'key_confidence': 0.504,\n",
+       " 'mode': 1,\n",
+       " 'mode_confidence': 0.731,\n",
+       " 'time_signature': 4,\n",
+       " 'time_signature_confidence': 0.514}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example['sections'][0]"
    ]
   },
   {
@@ -208,13 +239,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -223,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +270,7 @@
        "'7zvKFw17XyoBUx9mHiwzPy.json'"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,11 +281,302 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'start': 0.0,\n",
+       " 'duration': 19.11423,\n",
+       " 'confidence': 1.0,\n",
+       " 'loudness': -12.969,\n",
+       " 'tempo': 166.075,\n",
+       " 'tempo_confidence': 0.507,\n",
+       " 'key': 2,\n",
+       " 'key_confidence': 0.504,\n",
+       " 'mode': 1,\n",
+       " 'mode_confidence': 0.731,\n",
+       " 'time_signature': 4,\n",
+       " 'time_signature_confidence': 0.514}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example['sections'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kc_counter(lst):\n",
+    "    '''\n",
+    "    Return count of key changes throughout songs listed in individual json files\n",
+    "    lst = refers to .json song listing\n",
+    "    '''\n",
+    "    kc_list = []\n",
+    "    for record in lst:\n",
+    "        with open('../data/audio_analysis/{}'.format(record), 'r') as f:\n",
+    "            analysis = json.load(f)\n",
+    "            if isinstance(analysis, dict):\n",
+    "                if 'sections' in analysis:\n",
+    "                    try:\n",
+    "                        start_key = analysis['sections'][0]['key']\n",
+    "                        kc = 0\n",
+    "                        for item in analysis['sections']:\n",
+    "                            cur_key = item['key']\n",
+    "                            if cur_key != start_key:\n",
+    "                                start_key = cur_key\n",
+    "                                kc += 1\n",
+    "                        kc_list.append(dict({record.replace('.json', ''):kc}))\n",
+    "                    except:\n",
+    "                        kc_list.append(dict({record.replace('.json', ''): 'unable to record key changes'}))\n",
+    "    return kc_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kc_list = kc_counter(analysis_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21VDF2xzLl8P1vDVr0nuQY unable to record key changes\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in kc_list:\n",
+    "    for k, v in _.items():\n",
+    "        if v == 'unable to record key changes':\n",
+    "            print(k, v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'll need to drop this record."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kc_df = pd.Series([val.values() for val in kc_list], index=[k.keys() for k in kc_list])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kc_df = pd.Series()\n",
+    "for _ in kc_list:\n",
+    "    for k, v in _.items():\n",
+    "        kc_df.loc[k] = v"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dropping record with no key change value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kc_df.drop(labels='21VDF2xzLl8P1vDVr0nuQY', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dropping non-songs from key change listing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "non_songs = pd.read_csv('../data/non_songs.csv', index_col = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>s_song_id</th>\n",
+       "      <th>album_release_date</th>\n",
+       "      <th>artist_id</th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>explicit</th>\n",
+       "      <th>linked_album</th>\n",
+       "      <th>song_title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>2xfcxlx0QRbqUhpVidqmOU</td>\n",
+       "      <td>2013-05-28</td>\n",
+       "      <td>1xlkcCr7PNHw2dRG1Gm6YF</td>\n",
+       "      <td>Ron White</td>\n",
+       "      <td>322322.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>A Little Unprofessional</td>\n",
+       "      <td>L.A. Beautiful/You're Beautiful/The Yellow Blur</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>708</th>\n",
+       "      <td>5LMcncchvV1jYHMG4hviSN</td>\n",
+       "      <td>1998-04-04</td>\n",
+       "      <td>0NnoRcD3WkqC9aouHyE8YY</td>\n",
+       "      <td>Trey Parker</td>\n",
+       "      <td>153026.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Cannibal! The Musical (Original Motion Picture...</td>\n",
+       "      <td>Overture</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  s_song_id album_release_date               artist_id  \\\n",
+       "163  2xfcxlx0QRbqUhpVidqmOU         2013-05-28  1xlkcCr7PNHw2dRG1Gm6YF   \n",
+       "708  5LMcncchvV1jYHMG4hviSN         1998-04-04  0NnoRcD3WkqC9aouHyE8YY   \n",
+       "\n",
+       "     artist_name  duration_ms  explicit  \\\n",
+       "163    Ron White     322322.0      True   \n",
+       "708  Trey Parker     153026.0     False   \n",
+       "\n",
+       "                                          linked_album  \\\n",
+       "163                            A Little Unprofessional   \n",
+       "708  Cannibal! The Musical (Original Motion Picture...   \n",
+       "\n",
+       "                                          song_title  \n",
+       "163  L.A. Beautiful/You're Beautiful/The Yellow Blur  \n",
+       "708                                         Overture  "
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "non_songs.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kc_df.drop(labels=non_songs['s_song_id'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22909,)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kc_df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I have slightly fewer works then what's present in my `song_df`. Still enough to get a decent analysis with, however."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Getting Mean and Variance of Several Features within Song Sections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "def analysis_sorter(lst):\n",
+    "    '''\n",
+    "    Iterate through individual song .json files for sections, and calculate the mean and variance for \n",
+    "    'confidence', 'duration', 'loudness', 'mode', 'mode_confidence', 'tempo', and 'tempo_confidence' values. \n",
+    "    \n",
+    "    Returns two lists of dictionaries, one containing each song's section mean values, the other containing \n",
+    "    each song's section variance values.\n",
+    "    '''\n",
     "    mean_dicts = []\n",
     "    var_dicts = []\n",
     "    count = 0\n",
