--- a/notebooks/spotify_songs.ipynb
+++ b/notebooks/spotify_songs.ipynb
@@ -813,6 +813,26 @@
     "artist_df.to_csv('../data/artist_list_v2.csv')\n",
     "song_df.to_csv('../data/song_list_v2.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22914, 8)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "song_df.shape"
+   ]
   }
  ],
  "metadata": {
